# Gradu2

./: .gitignore  Readme.md  gradu2.bib  misc.md
experiments/experiment1/: pyproject.toml
experiments/experiment1/experiment1/: check_gpu.py  experiment1.py  experiment1_diabetes.py  experiment1_mnist.py  experiment1_utils.py  experiment1_wave_energy.py  hyperparametets.py  scratch.py
experiments/experiment1/experiment1/figures/: ml_metrics.py  test.py  tol1.py
experiments/ray-demo/: pyproject.toml
experiments/ray-demo/ray_demo/: openml_demo.py  ray_callback_demo.py  ray_data_demo.py  ray_demo.py  scikit_learn_demo.py
experiments/ray-demo/ray_demo/mlruns/0/: meta.yaml
experiments/ray-demo/ray_demo/mlruns/815220654928931385/: meta.yaml
experiments/ray-demo/ray_demo/mlruns/815220654928931385/ad9a68dd8e1c4c45950eb32cf47f114a/: meta.yaml
experiments/ray-demo/ray_demo/mlruns/815220654928931385/ad9a68dd8e1c4c45950eb32cf47f114a/metrics/: done  fit_time  iterations_since_restore  pid  should_checkpoint  time_since_restore  time_this_iter_s  time_total_s  timestamp  training_iteration
experiments/ray-demo/ray_demo/mlruns/815220654928931385/ad9a68dd8e1c4c45950eb32cf47f114a/tags/: trial_name
thesis/: gradu2.bib  gradu2.tex
thesis/chapters/: conclusions.tex  discussion.tex  introduction.tex  methods.tex  mlops.tex  relatedwork.tex  results.tex
