[tool.poetry]
name = "experiment1"
version = "0.1.0"
description = ""
authors = ["Aleksander Lempinen <aleksander.lempinen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
jupyterlab = "^4.0.9"
pandas = "^2.1.3"
ipykernel = "^6.27.0"
pip = "^23.3.1"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
psutil = "^5.9.6"
openml = "^0.14.1"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
ray = {version = "^2.8.0", extras = ["all"]}
async-timeout = "^4.0.3"
tdqm = "^0.0.1"
aim = {version = "^3.17.5", python="^3.11,<3.12"}
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
