[tool.poetry]
name = "ray-demo"
version = "0.1.0"
description = ""
authors = ["Aleksander Lempinen <aleksander.lempinen@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pip = "^23.2.1"
ipykernel = "^6.25.1"
pandas = "^2.1.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.5"
numpy = "^1.25.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"
ray = {version = "^2.6.3", extras = ["air"]}
scikit-learn = "^1.3.0"
nvidia-ml-py3 = "^7.352.0"
psutil = "^5.9.5"
mlflow = "^2.6.0"
tensorboardx = "^2.6.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
